# Stalin

./: .clang-format  CMakeLists.txt  README.md  spaceship.hpp
.github/workflows/: release.yml
Original_Assets/assets/audio/: .gitkeep
Original_Assets/assets/fonts/: .gitkeep
assets/: .gitkeep
assets/levels/: .gitkeep
assets/sprites/: .gitkeep
include/: aliens.hpp  block.hpp  entity.hpp  game.hpp  laser.hpp  obstacles.hpp  spaceship.hpp  stalin.h  stalin.hpp
src/: aliens.cpp  block.cpp  game.cpp  laser.cpp  main.cpp  obstacle.cpp  spaceship.cpp
